syntax = "proto3";

import "zitadel/object.proto";

package zitadel.policy.v1;

option go_package ="github.com/caos/zitadel/pkg/grpc/policy";

message OrgIAMPolicy {
    zitadel.v1.ObjectDetails details = 1;
    bool user_login_must_be_domain = 2;
    bool is_default = 3;
}

message LabelPolicy {
    zitadel.v1.ObjectDetails details = 1;
    string primary_color = 2;
    string secondary_color = 3;
    bool is_default = 4;
    bool hide_login_name_suffix = 5;
}

message LoginPolicy {
    zitadel.v1.ObjectDetails details = 1;
    bool allow_username_password = 2;
    bool allow_register = 3;
    bool allow_external_idp = 4;
    bool force_mfa = 5;
    PasswordlessType passwordless_type = 6;
    bool is_default = 7;
}

enum SecondFactorType {
    SECOND_FACTOR_TYPE_UNSPECIFIED = 0;
    SECOND_FACTOR_TYPE_OTP = 1;
    SECOND_FACTOR_TYPE_U2F = 2;
}

enum MultiFactorType {
    MULTI_FACTOR_TYPE_UNSPECIFIED = 0;
    MULTI_FACTOR_TYPE_U2F_WITH_VERIFICATION = 1; //TODO: what does livio think after the weekend? :D
}

enum PasswordlessType {
    PASSWORDLESS_TYPE_NOT_ALLOWED = 0;
    PASSWORDLESS_TYPE_ALLOWED = 1;
    //PLANNED: PASSWORDLESS_TYPE_WITH_CERT
}

message PasswordComplexityPolicy {
    zitadel.v1.ObjectDetails details = 1;
    uint64 min_length = 2;
    bool has_uppercase = 3;
    bool has_lowercase = 4;
    bool has_number = 5;
    bool has_symbol = 6;
    bool is_default = 7;
}

message PasswordAgePolicy {
    zitadel.v1.ObjectDetails details = 1;
    uint64 max_age_days = 2;
    uint64 expire_warn_days = 3;
    bool is_default = 4;
}

message PasswordLockoutPolicy {
    zitadel.v1.ObjectDetails details = 1;
    uint64 max_attempts = 2;
    bool show_lockout_failure = 3;
    bool is_default = 4;
}